save button functional

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WTF: Webpack starter kit</title>
+    <title>simple-editor</title>
     <meta name="description" content="Your project description" />
     <!-- Title -->
     <meta property="og:title" content="" />
@@ -26,11 +26,11 @@
 
     <p>
       <label for="twojaHistoria">Twoja historia:</label>
-      <textarea class="text" id="twojaHistoria" name="twojaHistoria"></textarea>
+      <textarea class="text text--js" id="twojaHistoria" name="twojaHistoria"></textarea>
     </p>
     <div>
-    <button class="save">Save</button>
-    <button class="load">Load</button>
+    <button class="save save--js">Save</button>
+    <button class="load load--js">Load</button>
     </div>
   </body>
 </html>
