--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,11 +23,13 @@
   </head>
   <body>
 <h1>Twój pomysł na bohatera</h1>
-
+<form>
     <p>
       <label for="twojaHistoria">Twoja historia:</label>
-      <textarea class="text text--js" id="twojaHistoria" name="twojaHistoria"></textarea>
+      <textarea class="text text--js" id="twojaHistoria" name="twojaHistoria">Wszystko zaczęło sie gdy...</textarea>
+        
     </p>
+  </form>
     <div>
     <button class="save save--js">Save</button>
     <button class="load load--js">Load</button>
